Última revisão de prova

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -7,22 +7,22 @@
 \chapterspecial{Prefácio}{}{}\label{prefuxe1cio}
 
 ``Aliás,\footnote{Esta tradução baseia-se na edição crítica
-  Colli-Montinari. \emph{Sämtliche Werke. Kritische Studienausgabe}. Bd.
-  1. Berlim/Munique: Walter de Gruyter/dtv, 1988. Quando necessário,
+  Colli-Montinari. \emph{Sämtliche Werke.} Kritische Studienausgabe. Bd.
+  1. Berlim/Munique: Walter de Gruyter, 1988. Quando necessário,
   comparamos nossa tradução com as seguintes traduções:
   \emph{Unfashionable Observations}. Trad. Richard Gray. Standford,
   California: Standford University Press, 1995; \emph{Untimely
   meditations}. Trad. R. J. Hollingdale. Cambridge: Cambridge University
-  Press, 1997; \emph{Segunda consideração intempestiva}. \emph{Da
-  utilidade e desvantagem da história para a vida.} Tradução: Marco
-  Antônio Casanova; Revisão técnica: Ernani Chaves. Rio de Janeiro:
-  Relume Dumará, 2003; \emph{Considérations inactuelles I et II}. Trad.
+  Press, 1997; \emph{Segunda consideração intempestiva}. Da
+  utilidade e desvantagem da história para a vida. Trad. Marco
+  Antônio Casanova. Rio de Janeiro:
+  Relume Dumará, 2003; \emph{Considérations inactuelles \versal{I} et \versal{II}}. Trad.
   Pierre Rusch. Paris: Gallimard, 1990. Para as notas do tradutor, foram
   úteis o aparato crítico da edição Colli-Montinari (Bd. 14) e as notas
   das edições mencionadas.} odeio tudo aquilo que apenas me instrui, sem
-aumentar ou estimular diretamente minha ação''\footnote{Carta de Goethe
-  a Schiller, de 19/12/1798. Nessa passagem, Goethe faz um comentário
-  sobre a \emph{Antropologia} de Kant.}. Com essas palavras de Goethe,
+aumentar ou estimular diretamente minha ação''.\footnote{\emph{Carta de Goethe
+  a Schiller,} de 19/12/1798. Nessa passagem, Goethe faz um comentário
+  sobre a \emph{Antropologia} de Kant.} Com essas palavras de Goethe,
 que expressam um resoluto \emph{ceterum censeo}\footnote{Palavras com
   que Catão, o Velho, finalizava seus discursos durante as Guerras
   Púnicas: ``\emph{Aliás, sou da opinião} de que Cartago deve ser
@@ -102,7 +102,7 @@ silencia, e o homem se espanta.\footnote{Passagem inspirada no poema
   Robert Hamerling (\emph{Leopardi's Gedichte}. Hildburghausen, 1866),
   versão que, como mostrou Otto Friedrich Bollonow, Nietz\-sche
   provavelmente conheceu (``Nietz\-sche und Leopardi''. \emph{Zeitschrift
-  für philosophische Forschung} (26), 1972).}
+  für philosophische Forschung,} 26, 1972).}
 
 No entanto, ele se espanta consigo mesmo, por não poder aprender a
 esquecer e por sempre estar pendurado no passado: por mais distante e
@@ -114,13 +114,13 @@ de repente volteia e pousa no colo do homem. Então diz o homem: ``eu me
 lembro'', e inveja o animal, que logo esquece e vê cada instante
 efetivamente fenecer, afundar na noite e na névoa, extinguindo-se para
 sempre. O animal vive de forma \emph{aistórica}: pois ele se absorve no
-presente, como um número, sem restar uma estranha fração\footnote{Erwin
+presente, como um número, sem restar uma estranha fração;\footnote{Erwin
   Rohde, ao ler as provas do livro, não gostou dessa expressão, que é,
   contudo, uma referência a Goethe: ``Eram homens sensatos, espirituosos
   e cheios de vida, que compreendiam muito bem que a soma de nossa
   existência, dividida pela razão, nunca é exata, restando sempre uma
-  estranha fração'' (\emph{Os anos de aprendizado de Wilhelm Meister},
-  Livro 4. Rio de Janeiro: Ed. 34, 2006, p. 266).}; ele não sabe
+  estranha fração'' (\emph{Os anos de aprendizado de Wilhelm Meister,}
+  Livro 4. Rio de Janeiro: Ed. 34, 2006, p. 266).} ele não sabe
 dissimular, nada esconde e aparece em cada momento inteiramente como
 aquilo que é; ele não sabe ser outra coisa senão sincero. O homem, ao
 contrário, luta contra a crescente e pesada carga do passado: esta o
@@ -134,10 +134,10 @@ brincadeira tem de acabar: já cedo, a criança é convocada a sair do
 esquecimento. Então aprende a entender a palavra ``era'', aquela senha
 que, junto com a luta, a dor e o fastio, leva o homem a se lembrar do
 que, no fundo, é sua existência -- um imperfectivo que nunca se
-perfaz\footnote{Em alemão: \emph{ein nie zu vollendendes Imperfectum}.
+perfaz.\footnote{Em alemão: \emph{ein nie zu vollendendes Imperfectum}.
   Traduzimos por imperfectivo para explicitar que Nietz\-sche faz uso aqui
   de um termo gramatical, referente aos tempos dos verbos que expressam
-  ações passadas inacabadas.}. Quando a morte enfim traz o seu ansiado
+  ações passadas inacabadas.} Quando a morte enfim traz o seu ansiado
 esquecimento, rouba também o presente e a existência, selando com
 isso aquele conhecimento de que a existência é apenas um ininterrupto
 ``ter sido'', uma coisa que vive de negar-se e consumir-se, de
@@ -162,8 +162,8 @@ esquecer, que fosse condenado a ver um devir em tudo: ele não acredita
 mais no seu próprio ser, não acredita mais em si, vendo tudo fluir de um
 ponto móvel a outro e se perdendo nessa correnteza do devir; por fim,
 como o íntegro discípulo de Heráclito, ele quase sequer ousará apontar o
-dedo\footnote{O discípulo de Heráclito em questão é Crátilo. (Cf. Livro
-  IV da \emph{Metafísica} de Aristóteles).}. A toda ação pertence o
+dedo.\footnote{O discípulo de Heráclito em questão é Crátilo. (Cf. Livro
+  \versal{IV} da \emph{Metafísica} de Aristóteles).} A toda ação pertence o
 esquecimento: assim como pertence à vida de todo organismo não somente a
 luz, mas também a escuridão. Um homem que sentisse tudo unicamente de
 forma histórica seria parecido com alguém que tivesse abdicado do sono,
@@ -256,14 +256,14 @@ anti-histórica -- o útero não apenas do ato injusto, mas, ao contrário,
 de todo ato justo; e nenhum artista alcançará sua obra, nenhum general,
 sua vitória, nenhum povo, sua liberdade, sem antes ter querido e ansiado
 tal estado aistórico. Assim como todo homem de ação, segundo as palavras
-de Goethe, é inescrupuloso\footnote{Nietz\-sche se refere ao seguinte
+de Goethe, é inescrupuloso, ele também é leviano;\footnote{Nietz\-sche se refere ao seguinte
   aforismo de Goethe: ``O homem de ação (\emph{Handelnde}) é sempre
   inescrupuloso; ninguém possui mais consciência que o homem
-  contemplativo (\emph{Betrachtende})'' (Maximen und Reflexionen.
-  In: \emph{Gesammelte Werke}, Herausgegeben von Erwin Laaths, Band VI.,
+  contemplativo (\emph{Betrachtende}).'' (``Maximen und Reflexionen''.
+  In: \emph{Gesammelte Werke}, Herausgegeben von Erwin Laaths, Bd. 6,
   p. 281). Düsseldorf: Deutscher Bücherbund, 1952. Não foi possível
   manter o jogo de palavras entre inescrupuloso (\emph{gewissenlos}) e
-  leviano (\emph{wissenlos}).}, ele também é leviano; para realizar algo
+  leviano (\emph{wissenlos}).} para realizar algo
 ele esquece a maioria das coisas, ele é injusto com aquilo que repousa
 atrás dele e conhece apenas um direito, o direito daquilo que agora deve
 vir a ser. Assim, todo homem de ação ama seu ato infinitamente mais do
@@ -278,8 +278,8 @@ conhece, elevar-se a um ponto de vista \emph{supra-histórico}, tal como
 o descreveu Niebuhr\footnote{Barthold G. Niebuhr (1776-1831),
   historiador prussiano. Até o momento não se identificou a fonte da
   citação que Nietz\-sche faz a seguir.}, como resultado possível da
-consideração histórica. Diz ele, ``Entendida de maneira clara e precisa,
-a história é útil ao menos para uma coisa: para que se saiba como também
+consideração histórica. Diz ele: ``Entendida de maneira clara e precisa,
+a história é útil ao menos para uma coisa -- para que se saiba como também
 os maiores e superiores espíritos da espécie humana não sabem quão
 fortuitamente eles adquirem a forma pela qual veem e obrigam, à força,
 que todos vejam; à força, porque a intensidade de sua consciência é
@@ -308,8 +308,8 @@ E, do que sobrou no copo da vida,\qb{} esperam tomar\\
 Aquilo que o primeiro gole de vigor\qb{} não pôde dar.\footnote{Segundo
   Walter Kaufmann (\emph{Nietz\-sche} -- Philosopher, psychologist,
   antichrist. Princeton: Princeton University Press, 1974),
-  citação da peça \emph{Aureng-zebe}, de John Dryden, incluída no
-  \emph{Diálogo sobre a religião natural} de Hume. No original consta
+  citação da peça ``Aureng-zebe'', de John Dryden, incluída no
+  \emph{Diálogo sobre a religião natural,} de Hume. No original consta
   ``pensam'' em vez de ``esperam''.}
 \end{verse}
 \end{quote}
@@ -359,7 +359,7 @@ a Terra merece.\\
 Dor e tédio é nosso ser, e o mundo\\
 é um lodo -- e nada mais.\\
 Assossega-te.\footnote{Nietz\-sche cita um trecho do poema ``A se
-  stesso'' (Para si mesmo).}
+  stesso'' (Para si mesmo), de Leopardi.}
 \end{verse}
 \end{quote}
 
@@ -474,10 +474,10 @@ dispensado seu desprezo. Mas algo viverá, um monograma de sua essência
 mais íntima, uma obra, um ato, uma rara iluminação, uma criação: viverá
 porque nenhuma posteridade pode renunciá-lo. Nessa forma transfigurada,
 contudo, a fama é ainda algo mais que a degustação de nosso
-amor-próprio, como Schopenhauer a chamou\footnote{Cf. o capítulo ``Von
+amor-próprio, como Schopenhauer a chamou;\footnote{Cf. o capítulo ``Von
   Dem, was Einer vorstellt'' (Sobre aquilo que alguém representa), de
   ``Aphorismen zur Lebensweisheit'' (Aforismos de sabedoria de vida).
-  In: \emph{Parerga e Paralipomena}. Zurique: Haffmans Verlag, 1999.}; ela é a crença na correlação e
+  In: \emph{Parerga e Paralipomena}. Zurique: Haffmans Verlag, 1999.} ela é a crença na correlação e
 continuidade do grandioso de todas as épocas, é um protesto contra a
 mudança de gerações e do passado.
 
@@ -541,9 +541,9 @@ são totalmente esquecidas, desprezadas, e escorrem como uma enchente
 terrível e interminável, da qual emergem, como ilhas, apenas alguns
 fatos embelezados: para algumas pessoas de boa visão, salta aos olhos
 algo de antinatural e sobrenatural, como a coxa dourada com que os
-discípulos de Pitágoras diziam reconhecer seu mestre\footnote{Anedota
-  presente no livro VIII de \emph{Vida e opiniões dos mais eminentes
-  filósofos}, de Diógenes Laércio.}. A história monumental ilude por
+discípulos de Pitágoras diziam reconhecer seu mestre.\footnote{Anedota
+  presente no livro \versal{VIII} de \emph{Vida e opiniões dos mais eminentes
+  filósofos}, de Diógenes Laércio.} A história monumental ilude por
 meio de analogias: com semelhanças sedutoras, ela estimula os corajosos
 à temeridade, os entusiastas ao fanatismo; e se pensarmos essa história
 nas mãos e mentes de egoístas talentosos e facínoras delirantes,
@@ -622,7 +622,7 @@ por sua existência. Cuidando com zelo do que é antigo e permanente, quer prese
  as condições sob as quais surgiu e outros deverão
 surgir depois dele -- e assim ele serve à vida. Em tal espírito, a posse
 dos utensílios ancestrais\footnote{Referência ao \emph{Fausto}, de
-  Goethe, I, linha 408.} modifica suas ideias: ele passa a ser por eles
+  Goethe, \versal{I}, linha 408.} modifica suas ideias: ele passa a ser por eles
 possuído. O que é pequeno, estreito, podre e envelhecido adquire honra
 pelo fato de que a alma conservadora e reverente do homem antiquário se
 transmigra para essas coisas e constrói para si um ninho oculto. A
@@ -650,9 +650,9 @@ estendeu entre eles: ele viu, pela primeira vez, a obra alemã
 ``realizar-se, provinda da forte e rouca alma alemã''. Tal sentido e
 ímpeto conduziram os italianos da Renascença e refizeram despertar, em
 sua densidade, o gênio italiano antigo, ``o eco maravilhoso da lira
-arcaica'', como disse Burckhardt\footnote{Citação extraída de \emph{Die
+arcaica'', como disse Burckhardt.\footnote{Citação extraída de \emph{Die
   Kultur der Renaissence in Italien} (\emph{A cultura do Renascimento na
-  Itália}).}. Mas aquele sentido reverente, histórico-antiquário, tem
+  Itália}).} Mas aquele sentido reverente, histórico-antiquário, tem
 seu maior valor onde ele estende um simples e pungente sentimento de
 prazer e satisfação sobre aquelas condições modestas, rudes, até mesmo
 miseráveis em que um homem ou um povo vive; como, por exemplo, Niebuhr
@@ -755,10 +755,10 @@ mesmo se enunciado pela justiça. ``Pois tudo o que surge
 força de vida e esquecimento quando viver e ser injusto são uma única
 coisa. Lutero pensou, certa feita, que o mundo só surgiu graças a um
 esquecimento de Deus, isto é, se Deus tivesse pensado nos ``armamentos
-pesados'', não teria criado o mundo\footnote{Segundo o tradutor francês,
+pesados'', não teria criado o mundo.\footnote{Segundo o tradutor francês,
   Nietz\-sche faria referência aqui à seguinte passagem dos discursos
   (\emph{Tischreden}) de Lutero: ``Se Adão pudesse ter visto os
-  artefatos fabricados por seus filhos, ele teria morrido de desgosto''.}.
+  artefatos fabricados por seus filhos, ele teria morrido de desgosto''.}
 Mas a mesma vida que precisa do esquecimento precisa, de vez em quando,
 da destruição desse esquecimento; então deve tornar-se claro como, por
 exemplo, é injusta a existência de um privilégio, de uma casta, de uma
@@ -825,7 +825,7 @@ tornará uma primeira.
     assistiu a esse espetáculo de forma tão explícita como a ciência do
     devir universal, a história, hoje o apresenta; certamente ela o
     apresenta com a perigosa temeridade de seu lema: \emph{Fiat veritas
-    pereat vita}\footnote{Que a verdade se realize e que o mundo pereça.}.
+    pereat vita.}\footnote{Que a verdade se realize e que o mundo pereça.}
 
     Imaginemos agora o processo mental presente na alma do homem
     moderno. O saber histórico flui, continuamente e em diversas
@@ -841,8 +841,8 @@ tornará uma primeira.
     mais inquieta e completamente mais doentia do que a primeira. Enfim,
     o homem moderno carrega consigo uma quantidade descomunal de
     indigestas pedras de conhecimento, que então, em certo momento e em
-    sua ordem, estrepitam na barriga, como no conto de fadas\footnote{Referência
-      ao conto ``O lobo e os sete cabritinhos'', dos Irmãos Grimm.}.
+    sua ordem, estrepitam na barriga, como no conto de fadas.\footnote{Referência
+      ao conto ``O lobo e os sete cabritinhos'', dos Irmãos Grimm.}
     Esse estrépito revela a caraterística mais própria desse homem
     moderno, que os povos antigos não conheciam: a estranha contradição
     de um interior que não corresponde a um exterior e um exterior que
@@ -901,9 +901,9 @@ tornará uma primeira.
     conhecer borbotoam e podem ser colocadas, com apuro, nas caixas da
     memória. A cultura de um povo, como o oposto dessa barbárie, foi uma
     vez designada -- com algum direito, como penso -- como unidade do
-    estilo artístico em todas as expressões vitais de um povo\footnote{Nietz\-sche
+    estilo artístico em todas as expressões vitais de um povo;\footnote{Nietz\-sche
       refere-se aqui a sua formulação de cultura presente na primeira
-      extemporânea, \emph{David Strauss, o devoto e o escritor}.};\label{vitaisdeumpovo} essa
+      extemporânea, \emph{David Strauss, o devoto e o escritor}.}\label{vitaisdeumpovo} essa
     designação não deve ser mal-entendida como se se tratasse de uma
     oposição entre barbárie e \emph{belo} estilo; o povo a que se
     prescreve uma cultura deve ser, em toda efetividade, apenas uma
@@ -1067,8 +1067,8 @@ foge quando vocês cobrem seus atos com a tenda da história. Quem quer
 entender, calcular, compreender, no instante em que deveria suportar,
 numa longa convulsão, o incompreensível e o sublime, pode ser chamado de
 racional, mas apenas no sentido em que Schiller fala do senso dos
-racionais\footnote{Referência ao poema ``As palavras da fé'', de
-  Schiller. Em alemão: ``Verstand der Verständige''.}: ele não vê o
+racionais:\footnote{Referência ao poema ``As palavras da fé'', de
+  Schiller. Em alemão: ``Verstand der Verständige''.} ele não vê o
 mesmo que uma criança vê, não ouve o mesmo que uma criança ouve; mas
 esse ``mesmo'' é o mais importante: pois, ao não entendê-lo, seu senso é
 mais infantil do que o da criança e mais ingênuo do que a
@@ -1142,32 +1142,37 @@ simplesmente impossível -- assim o quer a cultura histórica. Ainda são
 homens -- pode-se perguntar -- ou talvez apenas máquinas de pensar, escrever
 e falar?
 
-Certa vez, Goethe disse de Shakespeare\footnote{Ensaio ``Shakespeare und
-  kein Ende'' (Shakespeare para sempre), de Goethe.}: ``Ninguém
-desprezou o figurino material tanto quanto ele; pois conhecia muito bem
+Certa vez, Goethe disse de Shakespeare:\footnote{Ensaio ``Shakespeare und
+  kein Ende'' (Shakespeare para sempre), de Goethe.} 
+
+\begin{quote}
+``Ninguém desprezou o figurino material tanto quanto ele; pois conhecia muito bem
 o figurino humano interior, e neste todos são iguais. Diz-se que ele
 representou os romanos perfeitamente; não acho isso; eles nada mais são
 que ingleses encarnados, mas certamente são homens, fundamentalmente
-homens, e também as togas romanas lhes caem bem''. Agora eu pergunto se
+homens, e também as togas romanas lhes caem bem.'' 
+\end{quote}
+
+Agora eu pergunto se
 também seria possível representar nossos atuais literatos, cidadãos,
 funcionários públicos, políticos, como romanos; não seria possível, pois
 eles não são homens, e sim compêndios encarnados e igualmente abstrações
 concretas. Se tivessem caráter e natureza própria, enterrariam tudo isso
 fundo o suficiente para que não mais emergisse à luz do dia: se fossem
-homens, só o seriam para Aquele ``que sonda os rins''\footnote{Ironia
+homens, só o seriam para Aquele ``que sonda os rins''.\footnote{Ironia
   que utiliza as passagens do Salmo 7, 10 e de Jeremias 11, 20, nas quais Deus
   é descrito como Aquele que ``sonda o coração e os rins'', no sentido
   de que Ele examina interior e profundamente o caráter de uma
-  pessoa.}. Para todos os outros, seriam algo diferente, nem homens, nem
+  pessoa.} Para todos os outros, seriam algo diferente, nem homens, nem
 deuses, nem animais, e sim produtos de cultura histórica, inteiramente
 formação, imagem, forma sem conteúdo comprovável, infelizmente má forma,
-e além disso uniforme\footnote{Não foi possível manter aqui todo o jogo
+e além disso uniforme.\footnote{Não foi possível manter aqui todo o jogo
   que Nietz\-sche faz com os radicais \emph{Bild} e \emph{Form}: ``Für
   jeden Anderen sind sie etwas Anderes, nicht Menschen, nicht Götter,
   nicht Thiere, sondern historische \emph{Bild}ungsge\emph{bild}e, ganz
   und gar \emph{Bild}ung, \emph{Bild}, \emph{Form} ohne nachweisbaren
   Inhalt, leider nur schlechte \emph{Form}, und überdies
-  Uni\emph{form}''.}. E assim minha sentença pode ser compreendida e
+  Uni\emph{form}''.} E assim minha sentença pode ser compreendida e
 ponderada: \emph{a história é suportada apenas por personalidades
 fortes; ela extingue completamente as fracas}. Nisso repousa o fato de
 que ela confunde o sentimento e a sensação naqueles que não são fortes o
@@ -1180,8 +1185,8 @@ perde totalmente a coerência entre o homem e sua esfera histórica; vemos
 rapazotes desinibidos lidarem com os romanos como se estes fossem da sua
 laia: e eles soterram e enterram o que sobrou dos autores gregos, como
 se esses \emph{corpora} lá estivessem para ser dissecados e fossem
-\emph{vilia}\footnote{\emph{Corpora vilia} (corpos vis, sem valor).
-  Corpos considerados sem valor e por isso utilizados em experimentos.},
+\emph{vilia},\footnote{\emph{Corpora vilia} (corpos vis, sem valor).
+  Corpos considerados sem valor e por isso utilizados em experimentos.} 
 como são os seus próprios \emph{corpora} literários. Supondo que alguém
 trabalhe com Demócrito, sempre me vem uma pergunta: por que não
 Heráclito? Ou Fílon? Ou Bacon? Ou Descartes, e assim por diante? Por que
@@ -1192,9 +1197,9 @@ Mas, como dissemos, é uma geração de eunucos; para o eunuco toda mulher
 é igual, apenas a mulher, a mulher em si, a eterna inacessível -- assim,
 não importa o que fazem, se a história mesma permanecer conservada bela
 e ``objetivamente'' por aqueles que nunca poderão por si mesmos fazer
-história. E como nunca serão elevados pelo eterno feminino\footnote{Menção
+história. E como nunca serão elevados pelo eterno feminino,\footnote{Menção
   ao final do segundo livro do \emph{Fausto}, de Goethe: ``O eterno feminino
-  nos eleva''.}, afastam-se dele e tomam, neutros, também a própria
+  nos eleva''.} afastam-se dele e tomam, neutros, também a própria
 história como neutra. Com isso, não se acredite que comparo seriamente
 a história com o eterno feminino; quero, ao contrário, expressar com
 clareza que a considero o eterno masculino, que, para aqueles que são
@@ -1402,9 +1407,9 @@ dessa admissão, quando diz do historiador: ``um fenômeno começa, um
 atrás do outro, a se soltar da imprecisão cega e da liberdade sem regras
 e a se organizar em um todo coerente -- \emph{que certamente só existe
 em sua imaginação} {[}\emph{Vorstellung}{]} -- como um elo que se
-enfileira''\footnote{Schiller, ``O que significa e para que fim se
+enfileira''.\footnote{Schiller, ``O que significa e para que fim se
   estuda a história universal''. \emph{Vorstellung}, normalmente
-  traduzido por representação, foi vertido aqui por imaginação.}. O que
+  traduzido por representação, foi vertido aqui por imaginação.} O que
 dizer, contudo, desta afirmação de um célebre virtuose da história,
 expressa com fé, oscilando artificialmente entre a tautologia e o
 absurdo: ``não é um fato inquestionável que toda ação e impulso humanos
@@ -1412,7 +1417,7 @@ são submetidos ao silencioso e nem sempre percebido, mas violento e
 ininterrupto curso das coisas?'' Em tal frase se percebe tanto uma
 verdade enigmática quanto uma inverdade patente; como o dito do
 jardineiro goethiano: ``a natureza se deixa forçar, mas não se
-coagir''\footnote{Carta de Goethe a Schiller, de 21/02/1798.}, ou na
+coagir''\footnote{\emph{Carta de Goethe a Schiller,} de 21/02/1798.}, ou na
 inscrição de uma barraca de quermesse, contada por Swift: ``Aqui se
 encontra, com exceção de si mesmo, o maior elefante do mundo''. Qual é,
 contudo, a oposição entre ação e impulso humanos e o curso das coisas?
@@ -1556,16 +1561,16 @@ nossa época, e é até mesmo sentida como falsificação. Contudo, a
 história que apenas destrói, sem ter um impulso criador a conduzi-la,
 torna-se, com o tempo, pedante e inatural: pois esses homens destroem as
 ilusões e ``a natureza, como a mais dura tirana, pune quem destrói as
-ilusões em si e nos outros''\footnote{Goethe, ``Fragmento sobre a
-  natureza''.}. Pode-se até lidar com a história de maneira inofensiva
+ilusões em si e nos outros''.\footnote{Goethe, ``Fragmento sobre a
+  natureza''.} Pode-se até lidar com a história de maneira inofensiva
 e discreta, como se fosse uma ocupação como qualquer outra. Os novos
 teólogos, particularmente, parecem aprovar a história pura, devido ao
 seu caráter inofensivo, mal percebendo que com isso, e provavelmente
 contra a própria vontade, estão a serviço do \emph{écrasez}
-voltairiano\footnote{Referência ao ``destruam a infame'', ou seja, a
-  Igreja.}. Ninguém supunha atrás disso um instinto construtor forte;
+voltairiano.\footnote{Referência ao ``destruam a infame'', ou seja, a
+  Igreja.} Ninguém supunha atrás disso um instinto construtor forte;
 poder-se-ia então considerar a dita União Protestante\footnote{Instituição
-  alemã, fundada no século XIX, que unia diversos segmentos da igreja
+  alemã, fundada no século \versal{XIX}, que unia diversos segmentos da igreja
   reformada.} como o útero de uma nova religião, e um jurista como
 Holtzendorf\footnote{Franz von Holtzendorf (1829-89), jurista alemão.}
 (como editor e prefaciador da dita Bíblia protestante), o João do Rio
@@ -1641,7 +1646,7 @@ esse estranhamento, não mais se surpreender excessivamente, enfim, tudo
 tolerar -- isso se chama sentido histórico, cultura histórica.
 Expressando-me sem floreios: a massa de afluentes é tão grande, o
 estrangeiro, o bárbaro e o violento, ``espremidos em um monstruoso
-torrão''\footnote{Citação de \emph{O mergulhador}, de Schiller.},
+torrão'',\footnote{Citação de ``O mergulhador'', de Schiller.} 
 pressionam com tanta força a alma juvenil, que ela só sabe se salvar com
 uma estupidez calculada. Onde repousa uma consciência refinada e forte,
 encontra-se também uma outra sensação: o nojo. O jovem se tornou um
@@ -1654,7 +1659,7 @@ leitura da vida e obra dos filósofos de Diógenes Laércio:
 saber, que o que há de passageiro e mutável dos pensamentos e sistemas
 humanos me tinha atingido de forma quase mais trágica do que os
 destinos, que frequentemente são considerados a única
-realidade''\footnote{Carta de Hölderlin a Isaak v. Sinclair de 24/12/1798.}.
+realidade''.\footnote{\emph{Carta de Hölderlin a Isaak v. Sinclair,} de 24/12/1798.}
 Não, tal história transbordante, ensurdecedora e violenta certamente não
 é necessária para a juventude, como mostravam os antigos, sendo até
 mesmo perigosa, como mostram os modernos. No entanto, observem os
@@ -1896,11 +1901,11 @@ como o resultado necessário do processo universal; essa forma de
 considerar colocou a história, no lugar de outras forças espirituais,
 tais como a arte e a religião, como soberana única, na medida em que ela
 é ``o conceito realizado em si mesmo'', na medida em que ela é ``a
-dialética do espírito dos povos'' e ``o tribunal universal\footnote{Referência
+dialética do espírito dos povos'' e ``o tribunal universal''.\footnote{Referência
   à famosa frase de Hegel, na sua \emph{Filosofia da história}:
   ``\emph{Die Weltgeschichte ist das Weltgericht}'' (A história
   universal/do mundo é o tribunal universal/do mundo'').
-  \emph{Weltgerichte} também quer dizer Juízo Final.}''.
+  \emph{Weltgerichte} também quer dizer Juízo Final.}
 
 Com escárnio, chamou-se essa história hegeliana da marcha de Deus sobre
 a Terra; um Deus, por sua vez, que é criado pela história. Mas esse Deus
@@ -1920,15 +1925,15 @@ aprendeu a se curvar e a baixar a cabeça diante do ``poder da
 história'', quem enfim a balança com seu ``sim'', mecanicamente, como
 uma marionete chinesa, a todo poder, seja do governo, da opinião pública
 ou da maioria numérica, e que movimenta seus membros no mesmo ritmo em
-que um poder qualquer titereia\footnote{No alemão, ``\emph{am Faden
+que um poder qualquer titereia.\footnote{No alemão, ``\emph{am Faden
   ziehen}'' que, como no inglês ``\emph{to pull the strings}'', provém
   da imagem do titereiro; literalmente significa ``puxar os fios'' e
   figurativamente quer dizer controlar, exercer influência. Seguimos
   aqui a sugestão de ambos os tradutores de língua inglesa de fazer
   referência às marionetes chinesas, o que está implícito no texto em
-  alemão: ``der nickt zuletzt chinesenhaft-mechanisch sein `Ja' zu jeder
-  Macht'' (``que enfim balança a cabeça com seu `sim', de forma
-  mecânico-chinesa, a todo poder'').}. Contivesse aquele resultado uma
+  alemão: ``\emph{der nickt zuletzt chinesenhaft-mechanisch sein `Ja' zu jeder
+  Macht}'' (``que enfim balança a cabeça com seu `sim', de forma
+  mecânico-chinesa, a todo poder'').} Contivesse aquele resultado uma
 necessidade racional em si, fosse aquele evento a vitória da lógica ou
 da ``Ideia'' -- então que todos se ajoelhassem logo nos degraus dos
 ``resultados''! Quê! Não existiria mais nenhuma mitologia dominante?
@@ -1945,8 +1950,8 @@ objetivamente, sem ódio nem amor, tudo compreender, suave e
 delicadamente: e mesmo quando alguém educado nessa escola se enfurece e
 se enerva, satisfaz-se em saber que é artisticamente; é \emph{ira}
 {[}ódio{]} e \emph{studium} {[}estudo{]}, mas completamente \emph{sine
-ira et studio} {[}sem ódio e sem parcialidade{]}\footnote{Frase de
-  Tácito sobre como realizava seu trabalho de historiador.}.
+ira et studio} {[}sem ódio e sem parcialidade{]}.\footnote{Frase de
+  Tácito sobre como realizava seu trabalho de historiador.}
 
 Mas que pensamentos antiquados contra tal complexo de mitologia e
 virtude trago eu no coração! Mas eles devem ser expostos, mesmo que só
@@ -2015,9 +2020,9 @@ ironia se refugia no bem-estar desse cinismo; além do mais, é
 agraciado com a última e bela invenção da década passada, uma frase
 perfeita para aquele cinismo: chama-se a forma atual de ser e viver
 placidamente, ``a completa renúncia da personalidade no processo do
-mundo''\footnote{Citação da \emph{Filosofia do inconsciente}, de
+mundo''.\footnote{Citação da \emph{Filosofia do inconsciente}, de
 Eduard von Hartmann. As citações seguintes de Hartmann provêm
-desse livro.}. A personalidade e o processo do mundo! O processo
+desse livro.} A personalidade e o processo do mundo! O processo
 do mundo e a personalidade de um pulgão! Se não se tivesse de ouvir
 eternamente a hipérbole das hipérboles: a palavra mundo, mundo,
 mundo, ele deveria, com honestidade, falar em homem, homem, homem!
@@ -2039,7 +2044,7 @@ enigmas do devir, expressos no homem moderno como fruto mais maduro
     conhecimento; parece berrar para a natureza que ouve à sua volta:
     ``alcançamos a meta, somos a meta, somos a natureza perfeita''.
 
-    Europeu orgulhoso do século dezenove, você está perdendo o juízo!
+    Europeu orgulhoso do século \versal{XIX}, você está perdendo o juízo!
     Seu saber não completa a natureza; ao contrário, mata-a. Meça, ao
     menos uma vez, sua altura como conhecedor com sua baixeza como
     realizador. Certamente galga os raios solares do conhecimento em
@@ -2239,7 +2244,7 @@ enigmas do devir, expressos no homem moderno como fruto mais maduro
     e nobre. Pereça por ele -- não conheço melhor finalidade da vida do
     que perecer na busca do grande e impossível, \emph{animae magna
     prodigus}\footnote{``Pródigo de grande alma''\textbf{.} Expressão de
-      Horácio, \emph{Odes I}, significando ``sem cuidado com a vida''.}. Se, ao
+      Horácio, \emph{Odes \versal{I}}, significando ``sem cuidado com a vida''.}. Se, ao
     contrário, as doutrinas do devir soberano, da fluidez de todos os
     conceitos, tipos e espécies, da ausência de toda diferença cardinal
     entre homem e animal, doutrinas que tomo por verdadeiras mas letais
@@ -2653,10 +2658,10 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     Perguntarão: como chegaremos àqueles fins? O deus délfico chama-os,
     desde o início de sua caminhada para aqueles fins, com sua sentença:
     ``Conhece-te a ti mesmo''. É uma sentença difícil: pois aquele deus
-    ``não diz e nem oculta, mas dá sinais''\footnote{Heráclito,
-      Fragmento 93. Tradução de José Cavalcanti de Souza.
+    ``não diz e nem oculta, mas dá sinais'',\footnote{Heráclito,
+      ``Fragmento 93''. Trad. José Cavalcanti de Souza.
       \emph{Pré-Socráticos} (Coleção ``Os Pensadores''). São Paulo:
-      Abril Cultural, 1991.}, como disse Heráclito. Para onde ele os
+      Abril Cultural, 1991.} como disse Heráclito. Para onde ele os
     orienta?
 
     Houve séculos em que os gregos se encontravam no mesmo perigo em que
