Última revisão de prova - Intro

--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -15,28 +15,28 @@ pouco comentado pelo próprio Nietz\-sche.\footnote{Sobre a história da
   curta elaboração da segunda extemporânea, da recepção inicial e de seu
   efeito sobre o ânimo de Nietz\-sche, há um importante ensaio de Jörg
   Salaquarda: ``Studien zur zweiten~Unzeitgemäßen Betrachtung''. In:
-  \emph{Nietz\-sche-Studien}, (13), 1984, pp. 1-45.} Em sua autobiografia,
+  \emph{Nietz\-sche-Studien}, 13, 1984, pp. 1-45.} Em sua autobiografia,
 \emph{Ecce homo}, ao contrário das demais considerações extemporâneas,
 que são exaltadas, a segunda ganha elogiosas, mas parcas linhas: ``A
 \emph{segunda} extemporânea traz à luz o que há de perigoso, corrosivo e
-envenenador da vida na nossa forma de prática científica --: a vida
+envenenador da vida na nossa forma de prática científica: a vida
 \emph{doente} dessa engrenagem e mecanismo desumanos, da
 `\emph{im}pessoalidade' do trabalhador, da falsa economia da `divisão
 do trabalho'. Perde-se o fim, a cultura: -- o meio, a moderna prática
 científica, \emph{barbariza}... Nesse tratado o `sentido histórico', do
 qual nosso século se orgulha, foi pela primeira vez reconhecido como
-doença, como signo típico da decadência''\footnote{Nietz\-sche, F.
-  \emph{Ecce homo.} Berlim/Munique: Walter de Gruyter/dtv, 1988, p. 316.}.
+doença, como signo típico da decadência''.\footnote{Nietz\-sche, F.
+  \emph{Ecce homo.} Berlim/Munique: Walter de Gruyter, 1988, p. 316.}
 Não deixa de ser irônico que posteriormente esse escrito sobre a
 história passaria a ter um reconhecimento por parte da fortuna crítica
 só comparável, entre as primeiras obras de Nietz\-sche, ao
 \emph{Nascimento da tragédia}. Nos livros clássicos de Karl
 Jaspers\footnote{Jaspers, Karl.
-  \emph{Nietz\-sche}:~\emph{Einführung}~\emph{in das Verständnis seines
-  Philosophierens}. Berlim: Walter de Gruyter, 1936.} e Walter
+  \emph{Nietz\-sche:}~Einführung~in das Verständnis seines
+  Philosophierens. Berlim: Walter de Gruyter, 1936.} e Walter
 Kaufmann\footnote{Kaufmann, Walter.
-  \emph{Nietz\-sche}:~\emph{Philosopher},~\emph{Psychologist},
-  \emph{Antichrist}. Princeton: Princeton University Press, 1950.}, a
+  \emph{Nietz\-sche:}~Philosopher,~Psychologist,
+  Antichrist. Princeton: Princeton University Press, 1950.}, a
 segunda extemporânea tem um lugar de destaque na discussão sobre a
 filosofia da história de Nietz\-sche, e Martin Heidegger chegou a conduzir
 um seminário exclusivo sobre ela, em Freiburg, no semestre de inverno de
@@ -91,23 +91,23 @@ sua experiência no mundo), cabe saber até que ponto ela auxilia ou
 prejudica a vida, vista aqui não como um conceito biológico, mas como a
 experiência da vida humana, que só pode ser pensada no interior de uma
 cultura, como bem observaram Martin Heidegger\footnote{
-  Heidegger, Martin. \emph{Zur Auslegung von Nietz\-sches} II.
+  Heidegger, Martin. \emph{Zur Auslegung von Nietz\-sches \versal{II}.}
   Unzeitgemässer Betrachtung. Frankfurt am Main: Klostermann,
   2005.}
 e Volker Gerhardt\footnote{``Leben und Geschichte. Menschliches Handeln
-  und historischer Sinn in Nietz\-sches zweiter „Unzeitgemäßer
-  Betrachtung``''. In: \emph{Pathos und Distanz}. Studien zur
-  Philosophie Friedrich Nietz\-sches. Stuttgart: Reclam-Verlag 1988,
+  und historischer Sinn in Nietz\-sches zweiter `Unzeitgemäßer
+  Betrachtung'''. In: \emph{Pathos und Distanz.} Studien zur
+  Philosophie Friedrich Nietz\-sches. Stuttgart: Reclam-Verlag, 1988,
   133--162.}. Vemos, assim, que há um contexto filosófico e
 antropológico vasto e profundo nessa compreensão da história. Do mesmo
 modo, a crítica de Nietz\-sche ao fazer histórico de sua época não se
 reduz à disciplina histórica, nem às correntes filológicas de sua
-época\footnote{Sobre uma possível relação entre as três formas de
+época,\footnote{Sobre uma possível relação entre as três formas de
   história e as correntes filológicas da época de Nietz\-sche, ver:
-  Jensen, Anthony K. ``\emph{Geschichte}~or~\emph{Historie}? Nietz\-sche's
-  Second \emph{Untimely Meditation} in the Context of Nineteenth-Century
+  Jensen, Anthony K. ``Geschichte~or~Historie? Nietz\-sche's
+  Second Untimely Meditation in the Context of Nineteenth-Century
   Philological Studies''. In: Dries, Manuel (ed.). \emph{Nietz\-sche on
-  Time and~}History. Berlin: Walter de Gruyter, 2008.}, mas às próprias
+  Time and~History.} Berlin: Walter de Gruyter, 2008.} mas às próprias
 concepções de ciência e de conhecimento que permeiam essa prática e,
 mais que isso, às consequências que essa prática pode ter em toda uma
 cultura. Trata-se do perigo do excesso de sentido histórico, que leva a
@@ -364,8 +364,8 @@ da ideia consciente a partir da vontade inconsciente e, nessa época em
 particular, para realizar as condições para permitir o `fim
 providencial' que é o niilismo cultural''.\footnote{Jensen, Anthony K.
   ``The Rogue of All Rogues: Nietz\-sche's Presentation of Eduard von
-  Hartmann's \emph{Philosophie des Unbewussten} and Hartmann's Response
-  to Nietz\-sche''. In: \emph{Journal of Nietz\-sche Studies} (32), 2006, p.
+  Hartmann's Philosophie des Unbewussten and Hartmann's Response
+  to Nietz\-sche''. In: \emph{Journal of Nietz\-sche Studies,} 32, 2006, p.
   45.} Em outras palavras, Hartmann adota uma vontade inconsciente (mas
 teleologicamente orientada) que se desenvolve num processo histórico
 universal até a realização do absoluto, que representa o \emph{telos}
@@ -376,7 +376,7 @@ Atribuindo a Hartmann pejorativamente o epíteto ``galhofeiro dos
 galhofeiros'', Nietz\-sche cita algumas passagens da \emph{Filosofia do
 inconsciente} como exemplo de uma época senil, que se satisfaz em
 compreender como o fim último da existência a mediocridade cultural e
-que não vê a história como o resultado da ação humana individual.
+que não vê a história como o resultado da ação humana individual 
 (Hartmann teve oportunidade de se vingar posteriormente, em 1891 e em
 1898, quando Nietz\-sche já não estava consciente, negando-lhe maior
 significado na filosofia e acusando-o de plagiário de Stirner).
