Última revisão de prova - Créditos

--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -22,8 +22,8 @@
 %\newcommand\copyrightorganizacao{}
 %\newcommand\copyrightilustracao{}
 %\newcommand\copyrightintroducao{}
-\newcommand\titulooriginal{Unzeitgemäße Betrachtungen. Zweites Stück: Vom Nutzen und Nachteil der Historie für das Leben}
-\newcommand\edicaoconsultada{Colli-Montinari. \emph{Sämtliche Werke.} Kritische Studienausgabe. Bd. 1. Berlim/Munique: Walter de Gruyter, 1988.}
+\newcommand\titulooriginal{Vom Nutzen und Nachteil der Historie für das Leben}
+\newcommand\edicaoconsultada{\emph{Sämtliche Werke.} Berlim/Munique: De Gruyter, 1988.}
 \newcommand\primeiraedicao{1874}
 %\newcommand\agradecimentos{}
 %\newcommand\indicacao{}
