--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -5,7 +5,7 @@
 \newcommand{\sumariotitulo}{\titulo}
 \newcommand{\sumarioautor}{\autor}
 
-%\newcommand{\organizador}{André Luís Mota Itaparica}
+\newcommand{\organizador}{André Luís Mota Itaparica}
 \newcommand{\autor}{Friedrich Nietzsche}
 %\newcommand{\introdutor}{Introdutor}  % Obrigatório!
 \newcommand{\tradutor}{André Luís Mota Itaparica}
@@ -23,14 +23,14 @@
 %\newcommand\copyrightilustracao{}
 %\newcommand\copyrightintroducao{}
 \newcommand\titulooriginal{Vom Nutzen und Nachteil der Historie für das Leben}
-\newcommand\edicaoconsultada{\emph{Sämtliche Werke.} Berlim/Munique: De Gruyter, 1988.}
+\newcommand\edicaoconsultada{\emph{Sämtliche Werke.} De Gruyter, 1988}
 \newcommand\primeiraedicao{1874}
 %\newcommand\agradecimentos{}
 %\newcommand\indicacao{}
-%\newcommand\ISBN{}
+\newcommand\ISBN{978-85-7715-545-3}
 \newcommand\ano{2014}
 \newcommand\edicao{Jorge Sallum}
-\newcommand\coedicao{José Eduardo S. Góes}
+\newcommand\coedicao{José Eduardo Góes}
 \newcommand\assistencia{Equipe Hedra}
 %\newcommand\revisao{}
 %\newcommand\preparacao{}
